--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     html,body{height:100%}
     body{
       margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
-      background: radial-gradient(1200px 800px at 50% -20%, #182131 0%, #0d141d 50%, var(--bg) 100%);
+      /* TŁO: plik w głównym katalogu repo */
+      background:
+        linear-gradient(0deg, rgba(10,14,20,0.88), rgba(10,14,20,0.78)),
+        url('./Background.png') center center / cover no-repeat fixed;
       color:var(--text);
     }
 
@@ -76,7 +79,8 @@
     .hero{
       margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
       border-radius:50%;
-      background: radial-gradient(60% 60% at 50% 45%, #1f2937 0%, #0f1722 55%, #0b1018 100%);
+      /* delikatna, ciemna soczewka pod logo — bez blurów siatek */
+      background: radial-gradient(60% 60% at 50% 45%, #121a26 0%, #0d1520 55%, #0b1018 100%);
       border:1px solid var(--ring);
       display:grid; place-items:center; position:relative;
       box-shadow: inset 0 0 120px #000a, 0 40px 120px #000a;
@@ -88,21 +92,44 @@
     #micBtn{
       position:absolute; bottom:9%; left:50%; transform: translateX(-50%);
       padding:14px 18px; border-radius:18px; cursor:pointer; border:1px solid #2a3548;
-      background: rgba(20,27,38,.8); color:var(--text); font-size:22px;
+      background: rgba(20,27,38,.82); color:var(--text); font-size:22px;
       display:flex; align-items:center; gap:10px;
       box-shadow: 0 12px 40px rgba(0,0,0,.45), 0 0 0 0 rgba(0,255,128,0);
       transition: box-shadow .25s ease, transform .15s ease;
     }
     #micBtn:hover{ transform: translateX(-50%) scale(1.02); }
+
+    /* MOCNIEJSZY PULSE dla trybu nagrywania */
     #micBtn.recording{
-      animation: pulse 1.6s infinite;
-      border-color:#22d37f77;
-      box-shadow: 0 12px 40px rgba(0,0,0,.55), 0 0 26px #22d37f44;
+      border-color:#22d37f99;
+      animation: pulse 1.2s infinite;
+      box-shadow:
+        0 14px 44px rgba(0,0,0,.55),
+        0 0 26px #22d37f66,
+        0 0 0 0 rgba(34,211,127,.65);
     }
     @keyframes pulse{
-      0%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,.55); }
-      70%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 16px rgba(34,211,127,0); }
-      100%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,0); }
+      0%{
+        box-shadow:
+          0 14px 44px rgba(0,0,0,.55),
+          0 0 30px #22d37f77,
+          0 0 0 0 rgba(34,211,127,.55);
+        transform: translateX(-50%) scale(1.02);
+      }
+      60%{
+        box-shadow:
+          0 14px 44px rgba(0,0,0,.55),
+          0 0 40px #22d37f55,
+          0 0 0 22px rgba(34,211,127,0);
+        transform: translateX(-50%) scale(1.04);
+      }
+      100%{
+        box-shadow:
+          0 14px 44px rgba(0,0,0,.55),
+          0 0 30px #22d37f33,
+          0 0 0 0 rgba(34,211,127,0);
+        transform: translateX(-50%) scale(1.02);
+      }
     }
 
     /* transcript bubble */
@@ -131,7 +158,7 @@
 
     /* glass + glow aplikacja na wybrane elementy */
     .iconbtn.glass.glow{ border-color:rgba(255,255,255,.16); }
-    #micBtn.glass.glow{ background:rgba(20,27,38,.55); }
+    #micBtn.glass.glow{ background:rgba(20,27,38,.62); }
 
     @media (max-width:480px){
       h1{font-size:36px}
@@ -184,7 +211,7 @@
   <!-- Audio do TTS -->
   <audio id="ttsPlayer" preload="auto"></audio>
 
-  <!-- Logika asystenta -->
+  <!-- Logika asystenta (bez zmian) -->
   <script src="./freeflow-assistant.js"></script>
 
   <!-- Mini logika UI (niemodułowa) -->
