--- a/index.html
+++ b/index.html
@@ -7,51 +7,37 @@
   <link rel="icon" href="./Freeflow-logo.png" />
   <style>
     :root{
-      --bg:#0b0f14; --panel:#121821; --panel2:#16202c;
       --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00;
-      --glow:#ff7a00aa; --ring:#2a3545;
     }
     html,body{height:100%}
     body{
       margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
-      /* TŁO: plik w głównym katalogu repo */
-      background:
-        linear-gradient(0deg, rgba(10,14,20,0.88), rgba(10,14,20,0.78)),
-        url('./Background.png') center center / cover no-repeat fixed;
       color:var(--text);
+      /* PEŁNE TŁO z głównego katalogu */
+      background: url("./Background.png") center/cover fixed no-repeat #0b0f14;
     }
 
-    /* ===== efekty glass + neon ===== */
+    /* ===== ultra-lekki glass ===== */
     .glass{
-      background: rgba(255,255,255,.08);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border:1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.18);
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
+      border:1px solid rgba(255,255,255,.06);
       border-radius:15px;
-      box-shadow: 0 4px 30px rgba(0,0,0,.25);
+      box-shadow: 0 2px 18px rgba(0,0,0,.25);
     }
     .glow{
-      box-shadow:
-        0 0 10px rgba(0,255,255,.15),
-        0 0 20px rgba(0,255,255,.12),
-        0 0 30px rgba(0,255,255,.08);
-      transition: box-shadow .3s ease, transform .15s ease;
+      box-shadow: 0 0 14px rgba(0,255,255,.12);
+      transition: box-shadow .25s ease, transform .15s ease;
     }
-    .glow:hover{
-      box-shadow:
-        0 0 15px rgba(0,255,255,.25),
-        0 0 30px rgba(0,255,255,.18),
-        0 0 45px rgba(0,255,255,.12);
-      transform: translateY(-1px);
-    }
-    /* ================================= */
+    .glow:hover{ box-shadow: 0 0 22px rgba(0,255,255,.16); transform: translateY(-1px); }
 
     /* top bar */
     .topbar{
       display:flex; align-items:center; justify-content:space-between;
       padding:16px 18px; position:sticky; top:0; z-index:20;
-      background: linear-gradient(180deg, rgba(13,20,29,.9), rgba(13,20,29,.65), rgba(13,20,29,0));
-      backdrop-filter: blur(6px);
+      background: linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.22), rgba(0,0,0,0));
+      backdrop-filter: blur(3px);
     }
     .brand{ display:flex; align-items:center; gap:10px; font-weight:800; font-size:26px; }
     .brand img{width:36px; height:36px; border-radius:8px}
@@ -59,88 +45,72 @@
     .claim{font-size:12px; color:var(--muted); margin-top:-6px}
     .actions{display:flex; gap:10px}
     .iconbtn{
-      width:44px; height:44px; border-radius:12px; border:1px solid #243044;
-      background: linear-gradient(180deg,#17202d,#111722);
-      color:#cfe2ff; display:grid; place-items:center; cursor:pointer;
+      width:44px; height:44px; border-radius:12px; border:1px solid rgba(255,255,255,.06);
+      background: rgba(0,0,0,.18); color:#cfe2ff; display:grid; place-items:center; cursor:pointer;
       box-shadow: 0 4px 20px rgba(0,0,0,.35);
     }
     .badge{
       position:absolute; margin-top:-28px; margin-left:26px;
       background:var(--brand); color:#111; font-weight:700; font-size:12px;
       width:22px; height:22px; border-radius:50%; display:grid; place-items:center;
-      box-shadow:0 0 16px var(--glow);
+      box-shadow:0 0 16px #ff7a0033;
     }
 
-    /* hero */
+    /* układ */
     .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 40px}
     h1{font-size:42px; line-height:1.05; margin:8px 0 6px}
     .sub{color:var(--muted); margin-bottom:18px}
 
+    /* hero */
     .hero{
       margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
       border-radius:50%;
-      /* delikatna, ciemna soczewka pod logo — bez blurów siatek */
-      background: radial-gradient(60% 60% at 50% 45%, #121a26 0%, #0d1520 55%, #0b1018 100%);
-      border:1px solid var(--ring);
+      border:1px solid rgba(255,255,255,.06);
       display:grid; place-items:center; position:relative;
+      background: radial-gradient(60% 60% at 50% 45%, rgba(0,0,0,.35) 0%, rgba(0,0,0,.55) 55%, rgba(0,0,0,.65) 100%);
       box-shadow: inset 0 0 120px #000a, 0 40px 120px #000a;
     }
     .hero .logo{
-      width:76%; max-width:520px; filter: drop-shadow(0 8px 26px rgba(0,0,0,.45));
+      width:76%; max-width:520px; filter: drop-shadow(0 8px 26px rgba(0,0,0,.55));
       user-select:none; pointer-events:none;
+      animation: pulseLogo 2.2s ease-in-out infinite;
     }
+    /* delikatny puls, żeby “voice” był czytelny */
+    @keyframes pulseLogo {
+      0%,100% { transform: scale(1);   filter: drop-shadow(0 8px 26px rgba(0,0,0,.55)); }
+      50%     { transform: scale(1.015); filter: drop-shadow(0 10px 36px rgba(0,0,0,.65)); }
+    }
+
     #micBtn{
       position:absolute; bottom:9%; left:50%; transform: translateX(-50%);
-      padding:14px 18px; border-radius:18px; cursor:pointer; border:1px solid #2a3548;
-      background: rgba(20,27,38,.82); color:var(--text); font-size:22px;
+      padding:14px 18px; border-radius:18px; cursor:pointer; border:1px solid rgba(255,255,255,.08);
+      background: rgba(0,0,0,.22); color:var(--text); font-size:22px;
       display:flex; align-items:center; gap:10px;
-      box-shadow: 0 12px 40px rgba(0,0,0,.45), 0 0 0 0 rgba(0,255,128,0);
-      transition: box-shadow .25s ease, transform .15s ease;
+      box-shadow: 0 12px 40px rgba(0,0,0,.45);
+      transition: box-shadow .25s ease, transform .15s ease, background .25s ease;
     }
     #micBtn:hover{ transform: translateX(-50%) scale(1.02); }
-
-    /* MOCNIEJSZY PULSE dla trybu nagrywania */
     #micBtn.recording{
-      border-color:#22d37f99;
-      animation: pulse 1.2s infinite;
-      box-shadow:
-        0 14px 44px rgba(0,0,0,.55),
-        0 0 26px #22d37f66,
-        0 0 0 0 rgba(34,211,127,.65);
+      background: rgba(0,0,0,.28);
+      border-color:#22d37f77;
+      box-shadow: 0 12px 40px rgba(0,0,0,.55), 0 0 26px #22d37f44;
+      animation: btnPulse 1.6s infinite;
     }
-    @keyframes pulse{
-      0%{
-        box-shadow:
-          0 14px 44px rgba(0,0,0,.55),
-          0 0 30px #22d37f77,
-          0 0 0 0 rgba(34,211,127,.55);
-        transform: translateX(-50%) scale(1.02);
-      }
-      60%{
-        box-shadow:
-          0 14px 44px rgba(0,0,0,.55),
-          0 0 40px #22d37f55,
-          0 0 0 22px rgba(34,211,127,0);
-        transform: translateX(-50%) scale(1.04);
-      }
-      100%{
-        box-shadow:
-          0 14px 44px rgba(0,0,0,.55),
-          0 0 30px #22d37f33,
-          0 0 0 0 rgba(34,211,127,0);
-        transform: translateX(-50%) scale(1.02);
-      }
+    @keyframes btnPulse{
+      0%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,.55); }
+      70%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 16px rgba(34,211,127,0); }
+      100%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,0); }
     }
 
-    /* transcript bubble */
+    /* bąbel transkrypcji */
     .bubble{
       margin:18px auto 0; max-width:900px; padding:18px 16px; min-height:40px;
-      background: linear-gradient(180deg,#111824,#0e1520); border:1px solid #243044;
+      background: rgba(0,0,0,.18); border:1px solid rgba(255,255,255,.06);
       border-radius:18px; color:var(--text); font-size:18px;
-      box-shadow: inset 0 0 24px #0008, 0 8px 40px #000a;
+      box-shadow: inset 0 0 24px #0005, 0 8px 40px #000a;
     }
 
-    /* bottom buttons (równe) */
+    /* przyciski do skrótów */
     .bottom-buttons{
       display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:16px;
     }
@@ -148,17 +118,13 @@
       flex:1 1 calc(33.333% - 12px); max-width:180px; min-width:120px; height:56px;
       display:flex; align-items:center; justify-content:center; gap:10px;
       font-size:18px; border-radius:14px;
-      background: linear-gradient(180deg,#161e2a,#101723);
-      color:#e8eefb; border:1px solid #243044; cursor:pointer;
+      background: rgba(0,0,0,.18);
+      color:#e8eefb; border:1px solid rgba(255,255,255,.06); cursor:pointer;
       box-shadow: 0 10px 32px rgba(0,0,0,.35);
       transition: transform .15s ease, background .2s ease;
     }
-    .bottom-buttons button:hover{ transform: translateY(-1px); background: #182233; }
+    .bottom-buttons button:hover{ transform: translateY(-1px); background: rgba(0,0,0,.22); }
     .bottom-buttons .primary{ outline:2px solid #ff7a00aa; box-shadow:0 0 20px #ff7a0033 inset, 0 10px 32px #000; }
-
-    /* glass + glow aplikacja na wybrane elementy */
-    .iconbtn.glass.glow{ border-color:rgba(255,255,255,.16); }
-    #micBtn.glass.glow{ background:rgba(20,27,38,.62); }
 
     @media (max-width:480px){
       h1{font-size:36px}
@@ -211,7 +177,7 @@
   <!-- Audio do TTS -->
   <audio id="ttsPlayer" preload="auto"></audio>
 
-  <!-- Logika asystenta (bez zmian) -->
+  <!-- Logika asystenta -->
   <script src="./freeflow-assistant.js"></script>
 
   <!-- Mini logika UI (niemodułowa) -->
