--- a/index.html
+++ b/index.html
@@ -5,36 +5,41 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>FreeFlow • Voice to order</title>
   <link rel="icon" href="./Freeflow-logo.png" />
-  <!-- Nowoczesny font dla brandu -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root{
       --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00;
-      --menu-bg: rgba(0,0,0,.30); --menu-bdr: rgba(255,255,255,.08);
-      --neon:#00d1ff;
     }
     html,body{height:100%}
     body{
       margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
       color:var(--text);
-      /* TŁO z głównego katalogu (bez blur/siatek) */
+      /* PEŁNE TŁO z głównego katalogu */
       background: url("./Background.png") center/cover fixed no-repeat #0b0f14;
     }
 
-    /* Transparent UI */
-    .glass{ background: rgba(0,0,0,.18); backdrop-filter: blur(2px);
-      -webkit-backdrop-filter: blur(2px); border:1px solid rgba(255,255,255,.06);
-      border-radius:14px; box-shadow:0 2px 18px rgba(0,0,0,.25);
+    /* ===== ultra-lekki glass ===== */
+    .glass{
+      background: rgba(0,0,0,.18);
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
+      border:1px solid rgba(255,255,255,.06);
+      border-radius:15px;
+      box-shadow: 0 2px 18px rgba(0,0,0,.25);
     }
+    .glow{
+      box-shadow: 0 0 14px rgba(0,255,255,.12);
+      transition: box-shadow .25s ease, transform .15s ease;
+    }
+    .glow:hover{ box-shadow: 0 0 22px rgba(0,255,255,.16); transform: translateY(-1px); }
 
-    /* Topbar */
+    /* top bar */
     .topbar{
       display:flex; align-items:center; justify-content:space-between;
-      padding:14px 16px; position:sticky; top:0; z-index:50;
+      padding:16px 18px; position:sticky; top:0; z-index:20;
       background: linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.22), rgba(0,0,0,0));
       backdrop-filter: blur(3px);
     }
-    .brand{ display:flex; align-items:center; gap:10px; font-family:'Poppins',sans-serif; font-weight:700; font-size:26px; }
+    .brand{ display:flex; align-items:center; gap:10px; font-weight:800; font-size:26px; }
     .brand img{width:36px; height:36px; border-radius:8px}
     .brand .accent{color:var(--brand)}
     .claim{font-size:12px; color:var(--muted); margin-top:-6px}
@@ -51,62 +56,71 @@
       box-shadow:0 0 16px #ff7a0033;
     }
 
-    /* Dropdown menu (kontekstowe) */
-    .menu-wrap{ position:relative; }
-    .dropdown{ position:absolute; right:0; top:48px; min-width:220px; display:none;
-      background: var(--menu-bg); border:1px solid var(--menu-bdr); border-radius:12px;
-      box-shadow:0 12px 40px rgba(0,0,0,.35); overflow:hidden; z-index:60;
-    }
-    .dropdown.open{ display:block; }
-    .dd-item{ padding:12px 14px; font-size:15px; display:flex; align-items:center; justify-content:space-between; gap:10px; cursor:pointer; }
-    .dd-item:hover{ background: rgba(255,255,255,.06); }
-    .dd-sub{ display:none; border-top:1px solid var(--menu-bdr); }
-    .dd-item.expand::after{ content:'▸'; opacity:.6; }
-    .dd-item.expand.open::after{ content:'▾'; }
-    .dd-sub.open{ display:block; }
-    .dd-sub .dd-item{ padding-left:22px; }
-
-    /* Layout */
-    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 36px}
+    /* układ */
+    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 40px}
     h1{font-size:42px; line-height:1.05; margin:8px 0 6px}
     .sub{color:var(--muted); margin-bottom:18px}
 
-    /* HERO – tylko klikalne logo, bez obwódki/koła */
+    /* hero */
     .hero{
       margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
-      display:grid; place-items:center; position:relative; background:transparent; border:none; box-shadow:none;
+      border-radius:50%;
+      border:1px solid rgba(255,255,255,.06);
+      display:grid; place-items:center; position:relative;
+      background: radial-gradient(60% 60% at 50% 45%, rgba(0,0,0,.35) 0%, rgba(0,0,0,.55) 55%, rgba(0,0,0,.65) 100%);
+      box-shadow: inset 0 0 120px #000a, 0 40px 120px #000a;
     }
-    .logoBtn{ border:none; background:transparent; padding:0; cursor:pointer; display:grid; place-items:center; }
-    .logo{
-      width:76%; max-width:520px; user-select:none; pointer-events:none;
-      /* niebieski, delikatny neon tylko na krawędziach PNG (alpha) */
-      filter: drop-shadow(0 0 0px rgba(0,209,255,.0));
-      animation: neonPulse 2.2s ease-in-out infinite;
+    .hero .logo{
+      width:76%; max-width:520px; filter: drop-shadow(0 8px 26px rgba(0,0,0,.55));
+      user-select:none; pointer-events:none;
+      animation: pulseLogo 2.2s ease-in-out infinite;
     }
-    @keyframes neonPulse{
-      0%   { filter: drop-shadow(0 0 0px rgba(0,209,255,.0));    transform: scale(1); }
-      50%  { filter: drop-shadow(0 0 14px rgba(0,209,255,.38));  transform: scale(1.012); }
-      100% { filter: drop-shadow(0 0 0px rgba(0,209,255,.0));    transform: scale(1); }
+    /* delikatny puls, żeby “voice” był czytelny */
+    @keyframes pulseLogo {
+      0%,100% { transform: scale(1);   filter: drop-shadow(0 8px 26px rgba(0,0,0,.55)); }
+      50%     { transform: scale(1.015); filter: drop-shadow(0 10px 36px rgba(0,0,0,.65)); }
     }
 
-    /* Bąbel transkrypcji – mocno transparentny */
+    #micBtn{
+      position:absolute; bottom:9%; left:50%; transform: translateX(-50%);
+      padding:14px 18px; border-radius:18px; cursor:pointer; border:1px solid rgba(255,255,255,.08);
+      background: rgba(0,0,0,.22); color:var(--text); font-size:22px;
+      display:flex; align-items:center; gap:10px;
+      box-shadow: 0 12px 40px rgba(0,0,0,.45);
+      transition: box-shadow .25s ease, transform .15s ease, background .25s ease;
+    }
+    #micBtn:hover{ transform: translateX(-50%) scale(1.02); }
+    #micBtn.recording{
+      background: rgba(0,0,0,.28);
+      border-color:#22d37f77;
+      box-shadow: 0 12px 40px rgba(0,0,0,.55), 0 0 26px #22d37f44;
+      animation: btnPulse 1.6s infinite;
+    }
+    @keyframes btnPulse{
+      0%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,.55); }
+      70%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 16px rgba(34,211,127,0); }
+      100%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,0); }
+    }
+
+    /* bąbel transkrypcji */
     .bubble{
-      margin:8px auto 0; max-width:900px; padding:16px 14px; min-height:40px;
+      margin:18px auto 0; max-width:900px; padding:18px 16px; min-height:40px;
       background: rgba(0,0,0,.18); border:1px solid rgba(255,255,255,.06);
-      border-radius:14px; color:var(--text); font-size:18px;
+      border-radius:18px; color:var(--text); font-size:18px;
       box-shadow: inset 0 0 24px #0005, 0 8px 40px #000a;
     }
 
-    /* Dolne kafelki (na razie emoji, potem podmienimy na SVG) */
+    /* przyciski do skrótów */
     .bottom-buttons{
-      display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:14px;
+      display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:16px;
     }
     .bottom-buttons button{
       flex:1 1 calc(33.333% - 12px); max-width:180px; min-width:120px; height:56px;
       display:flex; align-items:center; justify-content:center; gap:10px;
       font-size:18px; border-radius:14px;
-      background: rgba(0,0,0,.18); color:#e8eefb; border:1px solid rgba(255,255,255,.06);
-      cursor:pointer; box-shadow: 0 10px 32px rgba(0,0,0,.35);
+      background: rgba(0,0,0,.18);
+      color:#e8eefb; border:1px solid rgba(255,255,255,.06); cursor:pointer;
+      box-shadow: 0 10px 32px rgba(0,0,0,.35);
       transition: transform .15s ease, background .2s ease;
     }
     .bottom-buttons button:hover{ transform: translateY(-1px); background: rgba(0,0,0,.22); }
@@ -115,6 +129,7 @@
     @media (max-width:480px){
       h1{font-size:36px}
       .bottom-buttons button{height:52px; font-size:16px; min-width:110px}
+      #micBtn{font-size:20px}
     }
   </style>
 </head>
@@ -129,26 +144,10 @@
       </div>
       <div class="claim">Voice to order</div>
     </div>
-
     <div class="actions">
-      <!-- Menu kontekstowe -->
-      <div class="menu-wrap">
-        <button class="iconbtn" id="menuBtn" aria-label="Menu">☰</button>
-        <div id="dropdown" class="dropdown glass">
-          <div class="dd-item expand" id="payExpand">Płatność</div>
-          <div class="dd-sub" id="paySub">
-            <div class="dd-item" data-pay="card">Karta</div>
-            <div class="dd-item" data-pay="blik">BLIK</div>
-            <div class="dd-item" data-pay="paypal">PayPal</div>
-          </div>
-          <div class="dd-item" id="ordersBtn">Twoje zamówienia</div>
-          <div class="dd-item" id="settingsBtn">Ustawienia</div>
-          <div class="dd-item" id="helpBtn">Pomoc</div>
-        </div>
-      </div>
-
+      <button class="iconbtn glass glow" id="menuBtn" aria-label="Menu">☰</button>
       <div style="position:relative">
-        <button class="iconbtn" id="cartBtn" aria-label="Koszyk">🛒</button>
+        <button class="iconbtn glass glow" id="cartBtn" aria-label="Koszyk">🛒</button>
         <div class="badge" id="cartBadge">0</div>
       </div>
     </div>
@@ -158,63 +157,49 @@
     <h1>Złóż zamówienie</h1>
     <div class="sub">Taxi, posiłek, a może nocleg?</div>
 
-    <!-- Hero: tylko klikalne logo -->
+    <!-- Hero z logo + mic -->
     <section class="hero">
-      <button id="micBtn" type="button" class="logoBtn" aria-label="Naciśnij, aby mówić">
-        <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
-      </button>
+      <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
+      <button id="micBtn" type="button" class="glass glow">🎤 Dotknij logo i mów…</button>
     </section>
 
     <!-- Transkrypcja / odpowiedzi -->
-    <div id="transcript" class="bubble glass">Transkrypcja pojawi się tutaj…</div>
+    <div id="transcript" class="bubble glass glow">Transkrypcja pojawi się tutaj…</div>
 
-    <!-- Przyciski skrótów (placeholdery) -->
-    <div class="bottom-buttons" style="margin-bottom:32px">
-      <button class="primary glass" data-quick="Jedzenie">🍽️ <span>Jedzenie</span></button>
-      <button class="glass" data-quick="Taxi">🚕 <span>Taxi</span></button>
-      <button class="glass" data-quick="Hotel">🏠 <span>Hotel</span></button>
+    <!-- Przyciski skrótów -->
+    <div class="bottom-buttons" style="margin-bottom:36px">
+      <button class="primary glass glow" data-quick="Jedzenie">🍽️ <span>Jedzenie</span></button>
+      <button class="glass glow" data-quick="Taxi">🚕 <span>Taxi</span></button>
+      <button class="glass glow" data-quick="Hotel">🏠 <span>Hotel</span></button>
     </div>
   </main>
 
+  <!-- Audio do TTS -->
   <audio id="ttsPlayer" preload="auto"></audio>
 
-  <!-- Asystent (logika SR/ASR/Chat/TTS) -->
+  <!-- Logika asystenta -->
   <script src="./freeflow-assistant.js"></script>
 
-  <!-- Mini logika UI: menu, koszyk, quick actions -->
-  <script type="module">
-    // Dropdown
-    const menuBtn = document.getElementById('menuBtn');
-    const dropdown = document.getElementById('dropdown');
-    const payExpand = document.getElementById('payExpand');
-    const paySub = document.getElementById('paySub');
+  <!-- Mini logika UI (niemodułowa) -->
+  <script>
+    const badgeEl = document.getElementById('cartBadge');
+    const cartBtn = document.getElementById('cartBtn');
+    cartBtn.addEventListener('click',()=> alert('Koszyk (coming soon)'));
+    document.getElementById('menuBtn').addEventListener('click',()=> alert('Menu (coming soon)'));
 
-    menuBtn.addEventListener('click', (e)=>{
-      e.stopPropagation();
-      dropdown.classList.toggle('open');
-    });
-    payExpand.addEventListener('click', (e)=>{
-      e.stopPropagation();
-      payExpand.classList.toggle('open');
-      paySub.classList.toggle('open');
-    });
-    document.addEventListener('click', (e)=>{
-      if (!dropdown.contains(e.target) && e.target !== menuBtn) {
-        dropdown.classList.remove('open');
-        payExpand.classList.remove('open');
-        paySub.classList.remove('open');
-      }
-    });
-
-    // Obsługa wyboru płatności (placeholder)
-    dropdown.querySelectorAll('[data-pay]').forEach(el=>{
-      el.addEventListener('click', ()=>{
-        const method = el.getAttribute('data-pay');
-        alert('Wybrano płatność: ' + method.toUpperCase());
+    // quick actions → wysyłamy gotowe prompt’y do asystenta
+    document.querySelectorAll('[data-quick]').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        const t = btn.dataset.quick;
+        if (window.sendToAssistant) {
+          window.sendToAssistant(`Zamówienie: ${t}. Pomóż dokończyć szczegóły.`);
+        }
       });
     });
+  </script>
 
-    // Koszyk (prosty localStorage – jak miałeś wcześniej)
+  <!-- Koszyk (moduł) -->
+  <script type="module">
     import { addToCart, getCart, cartCount, clearCart } from './cart.js';
 
     const badge = document.getElementById('cartBadge');
@@ -234,20 +219,7 @@
       alert(items.length ? items.map(i=>`• ${i.type} – ${i.name}`).join('\n') : 'Koszyk jest pusty');
     });
 
-    // Placeholdery
-    document.getElementById('ordersBtn').addEventListener('click', ()=> alert('Twoje zamówienia (wkrótce)'));
-    document.getElementById('settingsBtn').addEventListener('click',()=> alert('Ustawienia (wkrótce)'));
-    document.getElementById('helpBtn').addEventListener('click',    ()=> alert('Pomoc (FAQ, kontakt) – wkrótce'));
-
-    // Quick prompt do asystenta
-    document.querySelectorAll('[data-quick]').forEach(btn=>{
-      btn.addEventListener('click', ()=>{
-        const t = btn.dataset.quick;
-        if (window.sendToAssistant) {
-          window.sendToAssistant(`Zamówienie: ${t}. Pomóż dokończyć szczegóły.`);
-        }
-      });
-    });
+    window.FreeFlowCart = { addToCart, clearCart, getCart };
   </script>
 </body>
 </html>
