--- a/freeflo-demo.html
+++ b/freeflo-demo.html
@@ -41,7 +41,7 @@
   <script>
     // 🔧 WPROWADŹ SWOJE KLUCZE:
     const EMAILJS_PUBLIC_KEY = "PUBLIC_KEY_TUTAJ";
-    const EMAILJS_SERVICE_ID = "SERVICE_ID_TUTAJ";
+    const EMAILJS_SERVICE_ID = "service_abc123";
     const EMAILJS_TEMPLATE_ID = "template_jun43me";
     (function(){ emailjs.init(EMAILJS_PUBLIC_KEY); })();
 
