--- a/freeflo-demo.html
+++ b/freeflo-demo.html
@@ -40,7 +40,7 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     // 🔧 WPROWADŹ SWOJE KLUCZE:
-    const EMAILJS_PUBLIC_KEY = "PUBLIC_KEY_TUTAJ";
+    const EMAILJS_PUBLIC_KEY = "CgUuZgRwqBo62dmdd";
     const EMAILJS_SERVICE_ID = "service_abc123";
     const EMAILJS_TEMPLATE_ID = "template_jun43me";
     (function(){ emailjs.init(EMAILJS_PUBLIC_KEY); })();
