--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <audio id="ttsPlayer" preload="auto"></audio>
 
   <!-- Asystent (logika SR/ASR/Chat/TTS) -->
-  <script src="./freeflow-assistant.js"></script>
+<script src="./freeflow-assistant.js?v=3"></script>
 
   <!-- Mini logika UI: menu, koszyk, quick actions -->
   <script type="module">
